--- a/WindowsFormsApplication1/KeyValuePairView.xaml
+++ b/WindowsFormsApplication1/KeyValuePairView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WindowsFormsApplication1.MyList"
+﻿<UserControl x:Class="WindowsFormsApplication1.KeyValuePairView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,12 +10,8 @@
         <local:MockKeyItems x:Key="mockList"/>
     </UserControl.Resources>
     <StackPanel d:DataContext="{StaticResource mockList}">
-        <Button x:Name="Add" Content="Load KVPs/Enums" HorizontalAlignment="Left" Margin="10,5,0,10" VerticalAlignment="Top" Width="106" Click="Add_Click"/>
-        <ComboBox x:Name="comboUpperLower" HorizontalAlignment="Left" Margin="0,0,0,5" SelectionChanged="comboUpperLower_SelectionChanged"/>
-        <ComboBox x:Name="comboCycleSelect" HorizontalAlignment="Left" Margin="0,0,0,5" SelectionChanged="comboCycleSelect_SelectionChanged"/>
-        <ComboBox x:Name="comboOperation" HorizontalAlignment="Left" Margin="0,0,0,5" SelectionChanged="comboOperation_SelectionChanged"/>
-        <Button x:Name="Update" Content="Update Values" HorizontalAlignment="Left" Margin="10,5,0,10" VerticalAlignment="Top" Width="106" Click="Update_Click"/>
-        <TextBlock x:Name="textBlockValues" Text="TextBlock"/>
+        <Button x:Name="Add" Content="Load KVPs" HorizontalAlignment="Left" Margin="10,5,0,10" VerticalAlignment="Top" Width="106" Click="Add_Click"/>
+        <TextBlock Text="KVP List"/>
         <ListView VerticalAlignment="Top" ItemsSource="{Binding Items}">
             <ListView.ItemTemplate>
                 <DataTemplate>
@@ -40,5 +36,5 @@
         </ListView>
 
 
-    </StackPanel>
+    </StackPanel>    
 </UserControl>
