--- a/WindowsFormsApplication1/EnumerationListView.xaml
+++ b/WindowsFormsApplication1/EnumerationListView.xaml
@@ -10,9 +10,10 @@
         <local:EnumerationList x:Key="mockEnum" />
     </UserControl.Resources>
     <StackPanel d:DataContext="{StaticResource mockEnum}">
-        <Button x:Name="Add" Content="Button" HorizontalAlignment="Left" Margin="5,5,5,5" VerticalAlignment="Top" Width="75" Click="Add_Click"/>
+        <Button x:Name="Add" Content="Load Enums" HorizontalAlignment="Left" Margin="5,5,5,5" VerticalAlignment="Top" Width="75" Click="Add_Click"/>
         <ComboBox ItemsSource="{Binding Path=Items}" SelectedItem="{Binding Path=SelectedEnumeration}"></ComboBox>
-        <ListView VerticalAlignment="Top" ItemsSource="{Binding Items}">
+        <TextBlock Text="{Binding Path=SelectedEnumeration.Name}" Foreground="#FFF10E0E" FontWeight="Bold" FontSize="16" />
+        <ListView VerticalAlignment="Top" ItemsSource="{Binding Path=SelectedEnumeration.Items}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
