--- a/WindowsFormsApplication1/EnumerationListView.xaml
+++ b/WindowsFormsApplication1/EnumerationListView.xaml
@@ -13,7 +13,9 @@
         <Button x:Name="Add" Content="Load Enums" HorizontalAlignment="Left" Margin="5,5,5,5" VerticalAlignment="Top" Width="75" Click="Add_Click"/>
         <ComboBox ItemsSource="{Binding Path=Items}" SelectedItem="{Binding Path=SelectedEnumeration}"></ComboBox>
         <TextBlock Text="{Binding Path=SelectedEnumeration.Name}" Foreground="#FFF10E0E" FontWeight="Bold" FontSize="16" />
-        <ListView VerticalAlignment="Top" ItemsSource="{Binding Path=SelectedEnumeration.Items}">
+        <DataGrid ItemsSource="{Binding Path=SelectedEnumeration.Items}">            
+        </DataGrid>
+        <!--<ListView VerticalAlignment="Top" ItemsSource="{Binding Path=SelectedEnumeration.Items}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -24,6 +26,6 @@
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
-        </ListView>
+        </ListView>-->
     </StackPanel>
 </UserControl>
