--- a/WindowsFormsApplication1/EnumerationListView.xaml
+++ b/WindowsFormsApplication1/EnumerationListView.xaml
@@ -9,10 +9,10 @@
     <UserControl.Resources>
         <local:EnumerationList x:Key="mockEnum" />
     </UserControl.Resources>
-    <StackPanel d:DataContext="{StaticResource mockEnum}">
-        <Button x:Name="Add" Content="Load Enums" HorizontalAlignment="Left" Margin="5,5,5,5" VerticalAlignment="Top" Width="75" Click="Add_Click"/>
-        <ComboBox ItemsSource="{Binding Path=Items}" SelectedItem="{Binding Path=SelectedEnumeration}"></ComboBox>
-        <TextBlock Text="{Binding Path=SelectedEnumeration.Name}" Foreground="#FFF10E0E" FontWeight="Bold" FontSize="16" />
+    <DockPanel LastChildFill="True" d:DataContext="{StaticResource mockEnum}">
+        <Button DockPanel.Dock="Top" x:Name="Add" Content="Load Enums" HorizontalAlignment="Left" Margin="5,5,5,5" VerticalAlignment="Top" Width="75" Click="Add_Click"/>
+        <ComboBox DockPanel.Dock="Top" ItemsSource="{Binding Path=Items}" SelectedItem="{Binding Path=SelectedEnumeration}"></ComboBox>
+        <TextBlock DockPanel.Dock="Top" Text="{Binding Path=SelectedEnumeration.Name}" Foreground="#FFF10E0E" FontWeight="Bold" FontSize="16" />
         <DataGrid ItemsSource="{Binding Path=SelectedEnumeration.Items}">            
         </DataGrid>
         <!--<ListView VerticalAlignment="Top" ItemsSource="{Binding Path=SelectedEnumeration.Items}">
@@ -27,5 +27,5 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>-->
-    </StackPanel>
+    </DockPanel>
 </UserControl>
